.metadata/.plugins/org.eclipse.cdt.ui/RTC_LCD_MOTOR_RTC.build.log
10:01:06 **** Incremental Build of configuration Debug for project RTC_LCD_MOTOR_RTC ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:128:12: warning: pointer targets in passing argument 1 of 'strcmp' differ in signedness [-Wpointer-sign]
  128 |  if(strcmp(data_buf,"18")==0)
      |            ^~~~~~~~
      |            |
      |            uint8_t * {aka unsigned char *}
In file included from ../Core/Src/main.c:22:
c:\st\stm32cubeide_1.10.1\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.10.3-2021.10.win32_1.0.0.202111181127\tools\arm-none-eabi\include\string.h:36:14: note: expected 'const char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
   36 | int  strcmp (const char *, const char *);
      |              ^~~~~~~~~~~~
../Core/Src/main.c:135:17: warning: pointer targets in passing argument 1 of 'strcmp' differ in signedness [-Wpointer-sign]
  135 |  else if(strcmp(data_buf,"3E")==0)
      |                 ^~~~~~~~
      |                 |
      |                 uint8_t * {aka unsigned char *}
In file included from ../Core/Src/main.c:22:
c:\st\stm32cubeide_1.10.1\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.10.3-2021.10.win32_1.0.0.202111181127\tools\arm-none-eabi\include\string.h:36:14: note: expected 'const char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
   36 | int  strcmp (const char *, const char *);
      |              ^~~~~~~~~~~~
../Core/Src/main.c:142:17: warning: pointer targets in passing argument 1 of 'strcmp' differ in signedness [-Wpointer-sign]
  142 |  else if(strcmp(data_buf,"55")==0)
      |                 ^~~~~~~~
      |                 |
      |                 uint8_t * {aka unsigned char *}
In file included from ../Core/Src/main.c:22:
c:\st\stm32cubeide_1.10.1\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.10.3-2021.10.win32_1.0.0.202111181127\tools\arm-none-eabi\include\string.h:36:14: note: expected 'const char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
   36 | int  strcmp (const char *, const char *);
      |              ^~~~~~~~~~~~
../Core/Src/main.c: In function 'Time_Init':
../Core/Src/main.c:258:13: error: invalid storage class for function 'MX_I2C1_Init'
  258 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:292:13: error: invalid storage class for function 'MX_RTC_Init'
  292 | static void MX_RTC_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:374:13: error: invalid storage class for function 'MX_USART1_UART_Init'
  374 | static void MX_USART1_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:407:13: error: invalid storage class for function 'MX_GPIO_Init'
  407 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:433:1: error: expected declaration or statement at end of input
  433 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:62:13: warning: 'MX_USART1_UART_Init' used but never defined
   62 | static void MX_USART1_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:424:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  424 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:407:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  407 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:374:13: warning: 'MX_USART1_UART_Init' defined but not used [-Wunused-function]
  374 | static void MX_USART1_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:292:13: warning: 'MX_RTC_Init' defined but not used [-Wunused-function]
  292 | static void MX_RTC_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:258:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
  258 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:215:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  215 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

10:01:07 Build Failed. 6 errors, 10 warnings. (took 263ms)

